test/expect/cmd.castxml-twice.stderr.txt
^error: '--castxml-output=<v>' may be given at most once!

Usage: castxml .*$
